# NeuralInterface

./: CMakeLists.txt  NeuralInterface.cpp  NeuralInterface.h
example/: BasicExample.cpp
